    song info.
13. Add option to show current date & time when showing now-playing screen.
14. Always add 'E' to 'tags' when asking for artist's albums, required for
    emblems.
15. Better(?) portarait text position calculation.
16. Alter appearance of scan progress shown in server settings, so that progress
    can be seen with dark and light themes.

1.5.9
-----
1. If we have any query parameters, then add these to the webmanifest start_url.
2. When changing window width, wait until next tick to control queue menu items.
3. Set max height/width for images in album review.
4. If passed "?nativeColors" in URL query, then inform native app of toolbar and
   bottom navbar colours.
5. Remove diactrics when creating jumplists.
6. In now playing, if status has band and not albumartist then use that for
   albumartist - likewise with band_ids.
7. If fail to fetch biography and albumartist text is within artist text, then
   try to fetch biography of albumartist.
8. Back button navigates back in browse page.

1.5.8
-----
1. Reduce inline image margins.
2. Query server for library name each time dialog is open, so that we catch any
   changes.
3. Adjust screensaver text size with view width.
4. Fix reading list of items from cache - ID was not being set.
5. Remove env(safe-area-inset-bottom), not used.

1.5.7
-----
1. Don't use a constant for library name, fetch via JSONRPC call.

1.5.6
-----
 1. If current item has a 'remote_title' element and its id is negative, then
    allow title (or remote_title) and artist/composer to span up to 3 lines each
    in now-playing.
 2. Revert back to statically.io
 3. Fix size of player status icons (default, sleep, synced).
 4. Fix 'hung' state if close 'Manage players' dialog whilst it has a menu open.
 5. Update vue-virtual-scroller, vue-touch-events, vue-lazyload, and vuex.
 6. Update iOS/iPhone/iPad checks.
 7. Take into account safe-area-inset-bottom for iOS.