@@ -23,6 +23,7 @@
 15. Better(?) portarait text position calculation.
 16. Alter appearance of scan progress shown in server settings, so that progress
     can be seen with dark and light themes.
+17. Add support for user colours (see README.md for more details).
 
 1.5.9
 -----
